cmake_minimum_required(VERSION 3.25)
project(DiscreteMath C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

# Create separate executables for each source file
add_executable(ShortestPathUndirectedWeighted shortestpath_algorithms_undirectedweightedgraph.c)
add_executable(ShortestPathDirectedWeighted shortestpath_algorithms_directedweightedgraph.c)
add_executable(ShortestPathUndirectedUnweighted shortestpath_algorithms_undirectedunweightedgraph.c)
add_executable(ShortestPathDirectedUnweighted shortestpath_algorithms_directedunweightedgraph.c)
add_executable(NetworkGraph network_graph.c)